--- a/app/views/service/weibo/index.html.erb
+++ b/app/views/service/weibo/index.html.erb
@@ -1,1 +1,7 @@
-index
+<div class="row">
+    <div class="col-xs-12 input-group-lg">
+      <input type="text" class="form-control" placeholder="请输入关注对象微博昵称" id="nickname">
+    </div>
+</div>
+
+<div class="row" id="user_list"></div>
