--- a/app/views/layouts/service.html.erb
+++ b/app/views/layouts/service.html.erb
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <%= csrf_meta_tags %>
 </head>
-<body id="<%= controller_name %>">
+<body data-controller="<%= controller_name %>">
 
-<div class="container" id="<%= controller_name %>">
+<div class="container">
   <%= yield %>
 </div>
 
