Disable callout in UIWebView
http://stackoverflow.com/questions/5995210/disabling-user-selection-in-uiwebview

--- a/app/assets/stylesheets/service.css.scss
+++ b/app/assets/stylesheets/service.css.scss
@@ -3,6 +3,11 @@
  *= require_tree ./service/
  */
 
+html{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+}
+
 $nprogress-color: #21A0F5;
 $nprogress-height: 3px;
 
