--- a/app/views/service/netease/index.html.slim
+++ b/app/views/service/netease/index.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-xs-12.input-group-lg
-      input#keyword.form-control type='text' placeholder="请输入监控关键字" value="" maxlength=20
+    input#keyword.form-control type='text' placeholder="请输入提醒关键词" value="" maxlength=20
 
 #keyword_list.row
   = render partial: 'keyword'
