--- a/app/views/service/jingdong/_product.html.erb
+++ b/app/views/service/jingdong/_product.html.erb
@@ -2,7 +2,7 @@
 <div class="product_item col-xs-12">
   <div class="media">
     <div class="media-left">
-      <img src="<%= monitoring.product.image %>" class="center-block product_thumb">
+      <img data-src="<%= monitoring.product.image %>" class="center-block product_thumb">
       <span class="label label-warning center-block">¥ <%= monitoring.product.price.to_i %></span>
     </div>
     <div class="media-body">
