Change background color of qr-button

--- a/app/views/service/jingdong/index.html.erb
+++ b/app/views/service/jingdong/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="col-xs-12">
     <p class="centered">或者</p>
-    <button class="btn btn-info center-block" id="qr_button"><span class="glyphicon glyphicon-qrcode"></span> 扫描商品二维码</button>
+    <button class="btn btn-danger center-block" id="qr_button"><span class="glyphicon glyphicon-qrcode"></span> 扫描商品二维码</button>
   </div>
 </div>
 
