--- a/app/views/service/weibo/index.html.slim
+++ b/app/views/service/weibo/index.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-xs-12.input-group-lg
-    input#nickname type="text" class="form-control" placeholder="请输入微博昵称"
+    input#nickname type="text" class="form-control" placeholder="请输入关注对象的微博昵称"
 
 #user_list.row
 
