Add support for user-specific sound settings

--- a/app/views/service/weibo/_user_list.html.slim
+++ b/app/views/service/weibo/_user_list.html.slim
@@ -7,3 +7,4 @@
           span.name
             == user.name
           input.btn.btn-danger.btn-xs.unfollow-button type='button' data-user-id='#{user.id}' value='取消关注'
+          input.btn.btn-info.btn-xs.edit-button type='button' data-user-id='#{user.uid}' value='提醒设置'
