--- a/app/views/service/weibo/index.html.slim
+++ b/app/views/service/weibo/index.html.slim
@@ -4,3 +4,6 @@
 
 #user_list.row
 
+#modal.modal.fade tabindex='-1' role='dialog' aria-hidden='true'
+  .modal-dialog
+    #modal-content.modal-content
