--- a/app/assets/stylesheets/service/weibo.css.scss
+++ b/app/assets/stylesheets/service/weibo.css.scss
@@ -15,6 +15,12 @@ body[data-controller='weibo'] {
       float: right;
     }
 
+    .edit-button{
+      margin-top: 10px;
+      float:right;
+      margin-right: 20px;
+    }
+
     .user_item {
       padding: 10px 0;
       border-bottom: 1px solid #dfdfdf;
