Add support for skipping specific media source

--- a/app/views/service/netease/_keyword.html.slim
+++ b/app/views/service/netease/_keyword.html.slim
@@ -10,3 +10,7 @@
             .glyphicon.glyphicon-trash
             span 删除
 
+          button.edit_button.btn.btn-info.btn-xs  data-id='#{x.id}'
+            .glyphicon.glyphicon-edit
+            span 设置
+
