--- a/app/views/service/netease/index.html.slim
+++ b/app/views/service/netease/index.html.slim
@@ -5,3 +5,6 @@
 #keyword_list.row
   = render partial: 'keyword'
 
+#modal.modal.fade tabindex='-1' role='dialog' aria-hidden='true'
+  .modal-dialog
+    #modal-content.modal-content
