Change button text

--- a/app/views/service/weibo/_user_list.html.slim
+++ b/app/views/service/weibo/_user_list.html.slim
@@ -6,5 +6,5 @@
           == image_tag user.avatar, class: 'avatar'
           span.name
             == user.name
-          input.btn.btn-danger.btn-xs.unfollow-button type='button' data-user-id='#{user.id}' value='取消关注'
-          input.btn.btn-info.btn-xs.edit-button type='button' data-user-id='#{user.uid}' value='提醒设置'
+          input.btn.btn-danger.btn-xs.unfollow-button type='button' data-user-id='#{user.id}' value='删除'
+          input.btn.btn-info.btn-xs.edit-button type='button' data-user-id='#{user.uid}' value='设置'
